@agoedert: creating syntetic load and testing with locust

--- a/app/Makefile
+++ b/app/Makefile
@@ -6,4 +6,12 @@ push-image:
 
 run: build-image
 	docker run -it -p 8081:8081 gcr.io/technologyviewer/sample-app
+
+reset-app:
+	kubectl delete deployment sample-app
+	kubectl apply -f deployment.yaml
+
+redeploy-app: build-image push-image reset-app
+
+
     	
