--- a/app/autoscaling.yaml
+++ b/app/autoscaling.yaml
@@ -3,13 +3,13 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: sample-app
 spec:
-  minReplicas: 3
+  minReplicas: 1
   maxReplicas: 20
   metrics:
     - type: Resource
       resource:
         name: cpu
-        targetAverageValue: 400
+        targetAverageUtilization: 50
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
